--- a/maintanence.html
+++ b/maintanence.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>Maintenance | RMC Construction</title>
+        <title>Maintenance | RM CONSTRUCTIONS</title>
         <link rel="stylesheet preload" as="style" href="css/preload.min.css" />
         <link rel="stylesheet preload" as="style" href="css/libs.min.css" />
         <link rel="shortcut icon" href="/favicon.png">
@@ -14,23 +14,31 @@
         rel="stylesheet">
         <link rel="stylesheet" href="css/gallery-grid.min.css" />
 
+        <style>
+            .text-style{
+                font-size: 24px;
+                font-family: "Archivo",sans-serif;
+                font-weight: 600;
+            }
+        </style>
+
     </head>
     <body>
         <header class="header primary-bg" data-page="gallery-grid">
             <div class="header_navbar">
                 <div class="container d-flex flex-wrap flex-lg-nowrap align-items-center justify-content-between">
                     <a class="brand d-inline-flex align-items-center justify-content-center" href="index.html">
-                        <img src="/img/home/Logos/RMCWHite.png" alt="rmc-logo" height="60px">
+                        <img src="/img/home/Logos/RMCWHite.png" alt="rmc-logo" height="70px">
                         <span style="margin-top: 12px;
                             margin-left: 15px;
-                            width: 150px;
+                            width: 200px;
                             font-size: 18px;
-                            font-weight: 300;font-family: 'Times New Roman', Times, serif;"">RM Constructions
+                            font-weight: 800;font-family: 'Times New Roman', Times, serif;">RM CONSTRUCTIONS
                             <p style="
                             width: 200px;
-                            font-size: 16px;
+                            font-size: 14px;
                             font-family: 'Lato', sans-serif;
-    font-weight: 800;">Builders & Flat Promoters</p>
+    font-weight: 600;">Builders & Flat Promoters</p>
                         </span>
                     </a>
                     <nav class="header_navbar-nav">
@@ -137,18 +145,12 @@
         <!-- GALLERY GRID CONTENT START -->
         <main class="gallery section">
             <div class="container">
-                <h4>List of service we Do:</h4><br>
-                <h5>1: Painting</h5><br>
-                <h5>2: Plumbing</h5><br>
-                <h5>3: Electrical</h5><br>
-                <h5>4: Carpentering</h5><br>
-                <br>
-                <ul class="gallery_grid d-grid">
+                <ul class="gallery_grid d-grid" style="grid-gap: 70px 20px;">
                     <li class="gallery_grid-item" data-aos="fade-up" data-aos-once="true" data-order="1">
                         <a
                             class="gallery_grid-item_trigger"
-                            href="img/home/home/maintance/wall.jpg"
-                            data-caption="Special Interior Projects"
+                            href="img/home/maintance/wall.jpg"
+                            data-caption="Painting"
                             data-role="gallery-link"
                         >
                             <picture>
@@ -168,12 +170,14 @@
                                 <span class="overlay_label">Painting</span>
                             </div>
                         </a>
+                        <span class="overlay_label text-style">Painting</span>
                     </li>
+                   
                     <li class="gallery_grid-item" data-aos="fade-up" data-aos-once="true" data-order="2">
                         <a
                             class="gallery_grid-item_trigger"
                             href="img/home/maintance/plumbing.jpg"
-                            data-caption="Special Interior Projects"
+                            data-caption="Plumbing"
                             data-role="gallery-link"
                         >
                             <picture>
@@ -193,12 +197,13 @@
                                 <span class="overlay_label">Plumbing</span>
                             </div>
                         </a>
+                        <span class="overlay_label text-style">Plumbing</span>
                     </li>
                     <li class="gallery_grid-item" data-aos="fade-up" data-aos-once="true" data-order="3">
                         <a
                             class="gallery_grid-item_trigger"
                             href="img/home/maintance/electrical.jpg"
-                            data-caption="Special Interior Projects"
+                            data-caption="Electrical"
                             data-role="gallery-link"
                         >
                             <picture>
@@ -218,12 +223,13 @@
                                 <span class="overlay_label">Electrical</span>
                             </div>
                         </a>
+                        <span class="overlay_label text-style">Electrical</span>
                     </li>
                     <li class="gallery_grid-item" data-aos="fade-up" data-aos-once="true" data-order="4">
                         <a
                             class="gallery_grid-item_trigger"
                             href="img/home/maintance/carpenter.jpg"
-                            data-caption="Special Interior Projects"
+                            data-caption="Carpentering"
                             data-role="gallery-link"
                         >
                             <picture>
@@ -243,6 +249,7 @@
                                 <span class="overlay_label">Carpentering</span>
                             </div>
                         </a>
+                        <span class="overlay_label text-style">Carpentering</span>
                     </li>
                  
                 </ul>
@@ -254,15 +261,15 @@
                 <div class="footer_main d-flex flex-wrap justify-content-md-between col-12">
                     <div class="footer_main-block col-sm-12 col-xl-auto">
                         <a class="brand d-inline-flex align-items-center justify-content-center" href="index.html">
-                            <img src="/img/home/Logos/RMCWHite.png" alt="rmc-logo" height="60px"><span style="margin-top: 12px;
+                            <img src="/img/home/Logos/RMCWHite.png" alt="rmc-logo" height="70px"><span style="margin-top: 12px;
                                 margin-left: 14px;
-                                width: 150px;
+                                width: 200px;
                                 font-size: 18px;
-                                font-weight: 100;font-family: 'Times New Roman', Times, serif;"">RM Constructions<p style="
+                                font-weight: 800;font-family: 'Times New Roman', Times, serif;">RM CONSTRUCTIONS<p style="
                                 width: 175px;
-                                font-size: 16px;
+                                font-size: 14px;
                                 font-family: 'Lato', sans-serif;
-        font-weight: 800;">Builders & Flat Promoters</p></span>
+        font-weight: 600;">Builders & Flat Promoters</p></span>
                         </a>
                         <p class="footer_main-block_subtitle footer_main-block_subtitle--brand">
                             What we build today should last for generations to come. We should embrace the purpose of the construction and live with its value.
@@ -280,7 +287,7 @@
                         </div>
                         <div class="group-wrapper d-flex justify-content-center">
                             <i class="icon-location icon"></i>
-                            <div style="font-size: 16px;" class="group d-flex flex-column">
+                            <div style="font-size: 14px;" class="group d-flex flex-column">
                                 <span>R.M.TOWERS,</span>
                                 <span> No. 108, Chamiers,</span>
                                 <span>Chennai - 600 018</span>
