--- a/team.html
+++ b/team.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>Team | RMC Construction</title>
+        <title>Team | RM CONSTRUCTIONS</title>
         <link rel="stylesheet preload" as="style" href="css/preload.min.css" />
         <link rel="stylesheet preload" as="style" href="css/libs.min.css" />
         <link rel="shortcut icon" href="/favicon.png">
@@ -20,17 +20,17 @@
             <div class="header_navbar">
                 <div class="container d-flex flex-wrap flex-lg-nowrap align-items-center justify-content-between">
                     <a class="brand d-inline-flex align-items-center justify-content-center" href="index.html">
-                        <img src="/img/home/Logos/RMCWHite.png" alt="rmc-logo" height="60px">
+                        <img src="/img/home/Logos/RMCWHite.png" alt="rmc-logo" height="70px">
                         <span style="margin-top: 12px;
                             margin-left: 15px;
-                            width: 150px;
+                            width: 200px;
                             font-size: 18px;
-                            font-weight: 300;font-family: 'Times New Roman', Times, serif;"">RM Constructions
+                            font-weight: 800;font-family: 'Times New Roman', Times, serif;">RM CONSTRUCTIONS
                             <p style="
                             width: 200px;
-                            font-size: 16px;
+                            font-size: 14px;
                             font-family: 'Lato', sans-serif;
-    font-weight: 800;">Builders & Flat Promoters</p>
+    font-weight: 600;">Builders & Flat Promoters</p>
                         </span>
                     </a>
                     <nav class="header_navbar-nav">
@@ -433,15 +433,15 @@
                 <div class="footer_main d-flex flex-wrap justify-content-md-between col-12">
                     <div class="footer_main-block col-sm-12 col-xl-auto">
                         <a class="brand d-inline-flex align-items-center justify-content-center" href="index.html">
-                            <img src="/img/home/Logos/RMCWHite.png" alt="rmc-logo" height="60px"><span style="margin-top: 12px;
+                            <img src="/img/home/Logos/RMCWHite.png" alt="rmc-logo" height="70px"><span style="margin-top: 12px;
                                 margin-left: 14px;
-                                width: 150px;
+                                width: 200px;
                                 font-size: 18px;
-                                font-weight: 100;font-family: 'Times New Roman', Times, serif;"">RM Constructions<p style="
+                                font-weight: 800;font-family: 'Times New Roman', Times, serif;">RM CONSTRUCTIONS<p style="
                                 width: 175px;
-                                font-size: 16px;
+                                font-size: 14px;
                                 font-family: 'Lato', sans-serif;
-        font-weight: 800;">Builders & Flat Promoters</p></span>
+        font-weight: 600;">Builders & Flat Promoters</p></span>
                         </a>
                         <p class="footer_main-block_subtitle footer_main-block_subtitle--brand">
                             Libero volutpat sed cras ornare arcu dui vivamus. Ac tortor dignissim convallis aenean et tortor at risus
