--- a/projects.html
+++ b/projects.html
@@ -264,7 +264,7 @@
                             <div class="text-wrapper d-flex flex-column justify-content-between">
                                 <h3 class="projects_list-item_title" data-aos="fade-in" data-aos-duration="500"
                                     data-aos-once="true">
-                                    RMC Construction @ Perungudi
+                                    Kolam @ Perungudi
                                     <span class="divider divider--line" data-aos="slide-right" data-aos-duration="500"
                                         data-aos-once="true"></span>
                                 </h3>
@@ -709,7 +709,7 @@
                             <div class="text-wrapper d-flex flex-column justify-content-between">
                                 <h3 class="projects_list-item_title" data-aos="fade-in" data-aos-duration="500"
                                     data-aos-once="true">
-                                    RMC Construction @ Saligramam
+                                    Meenam @ Saligramam
                                     <span class="divider divider--line" data-aos="slide-right" data-aos-duration="500"
                                         data-aos-once="true"></span>
                                 </h3>
@@ -828,7 +828,7 @@
                             <div class="text-wrapper d-flex flex-column justify-content-between">
                                 <h3 class="projects_list-item_title" data-aos="fade-in" data-aos-duration="500"
                                     data-aos-once="true">
-                                    RMC Construction @ Kandhanchavadi
+                                    Floaters @ Kandhanchavadi
                                     <span class="divider divider--line" data-aos="slide-right" data-aos-duration="500"
                                         data-aos-once="true"></span>
                                 </h3>
@@ -944,7 +944,7 @@
                             <div class="text-wrapper d-flex flex-column justify-content-between">
                                 <h3 class="projects_list-item_title" data-aos="fade-in" data-aos-duration="500"
                                     data-aos-once="true">
-                                    RMC Construction @ Vengateshapuram
+                                    Gods Walk @ Vengateshapuram
                                     <span class="divider divider--line" data-aos="slide-right" data-aos-duration="500"
                                         data-aos-once="true"></span>
                                 </h3>
@@ -982,7 +982,7 @@
                             <div class="text-wrapper d-flex flex-column justify-content-between">
                                 <h3 class="projects_list-item_title" data-aos="fade-in" data-aos-duration="500"
                                     data-aos-once="true">
-                                    RMC Construction @ Adayar
+                                    Rancher @ Adayar
                                     <span class="divider divider--line" data-aos="slide-right" data-aos-duration="500"
                                         data-aos-once="true"></span>
                                 </h3>
@@ -1020,7 +1020,7 @@
                             <div class="text-wrapper d-flex flex-column justify-content-between">
                                 <h3 class="projects_list-item_title" data-aos="fade-in" data-aos-duration="500"
                                     data-aos-once="true">
-                                    RMC Construction @ Nugambakkam
+                                    Mandolin @ Nugambakkam
                                     <span class="divider divider--line" data-aos="slide-right" data-aos-duration="500"
                                         data-aos-once="true"></span>
                                 </h3>
@@ -1058,7 +1058,7 @@
                             <div class="text-wrapper d-flex flex-column justify-content-between">
                                 <h3 class="projects_list-item_title" data-aos="fade-in" data-aos-duration="500"
                                     data-aos-once="true">
-                                    RMC Construction @ Mylapore
+                                    Coastal @ Mylapore
                                     <span class="divider divider--line" data-aos="slide-right" data-aos-duration="500"
                                         data-aos-once="true"></span>
                                 </h3>
@@ -1097,7 +1097,7 @@
                             <div class="text-wrapper d-flex flex-column justify-content-between">
                                 <h3 class="projects_list-item_title" data-aos="fade-in" data-aos-duration="500"
                                     data-aos-once="true">
-                                    RMC Construction @ Mandavelli
+                                    Prime Winds @ Mandavelli
                                     <span class="divider divider--line" data-aos="slide-right" data-aos-duration="500"
                                         data-aos-once="true"></span>
                                 </h3>
@@ -1135,7 +1135,7 @@
                             <div class="text-wrapper d-flex flex-column justify-content-between">
                                 <h3 class="projects_list-item_title" data-aos="fade-in" data-aos-duration="500"
                                     data-aos-once="true">
-                                    RMC Construction @ Mylapore
+                                    Natham @ Mylapore
                                     <span class="divider divider--line" data-aos="slide-right" data-aos-duration="500"
                                         data-aos-once="true"></span>
                                 </h3>
@@ -1175,7 +1175,7 @@
                             <div class="text-wrapper d-flex flex-column justify-content-between">
                                 <h3 class="projects_list-item_title" data-aos="fade-in" data-aos-duration="500"
                                     data-aos-once="true">
-                                    RMC Construction @ Vannanthurai
+                                    Forester @ Vannanthurai
                                     <span class="divider divider--line" data-aos="slide-right" data-aos-duration="500"
                                         data-aos-once="true"></span>
                                 </h3>
@@ -1252,7 +1252,7 @@
                             <div class="text-wrapper d-flex flex-column justify-content-between">
                                 <h3 class="projects_list-item_title" data-aos="fade-in" data-aos-duration="500"
                                     data-aos-once="true">
-                                    RMC Construction @ Thiruvanmiyur
+                                    Vriksha @ Thiruvanmiyur
                                     <span class="divider divider--line" data-aos="slide-right" data-aos-duration="500"
                                         data-aos-once="true"></span>
                                 </h3>
@@ -1328,7 +1328,7 @@
                             <div class="text-wrapper d-flex flex-column justify-content-between">
                                 <h3 class="projects_list-item_title" data-aos="fade-in" data-aos-duration="500"
                                     data-aos-once="true">
-                                    RMC Construction @ R.A.Puram
+                                    Pine Roads @ R.A.Puram
                                     <span class="divider divider--line" data-aos="slide-right" data-aos-duration="500"
                                         data-aos-once="true"></span>
                                 </h3>
@@ -1405,7 +1405,7 @@
                             <div class="text-wrapper d-flex flex-column justify-content-between">
                                 <h3 class="projects_list-item_title" data-aos="fade-in" data-aos-duration="500"
                                     data-aos-once="true">
-                                    RMC Construction @ Nesam Court
+                                    Vennila @ Nesam Court
                                     <span class="divider divider--line" data-aos="slide-right" data-aos-duration="500"
                                         data-aos-once="true"></span>
                                 </h3>
@@ -1443,7 +1443,7 @@
                             <div class="text-wrapper d-flex flex-column justify-content-between">
                                 <h3 class="projects_list-item_title" data-aos="fade-in" data-aos-duration="500"
                                     data-aos-once="true">
-                                    RMC Construction @ Mylapore
+                                    Naga @ Mylapore
                                     <span class="divider divider--line" data-aos="slide-right" data-aos-duration="500"
                                         data-aos-once="true"></span>
                                 </h3>
@@ -1481,7 +1481,7 @@
                             <div class="text-wrapper d-flex flex-column justify-content-between">
                                 <h3 class="projects_list-item_title" data-aos="fade-in" data-aos-duration="500"
                                     data-aos-once="true">
-                                    RMC Construction @ Mandavelli
+                                    Gokulam @ Mandavelli
                                     <span class="divider divider--line" data-aos="slide-right" data-aos-duration="500"
                                         data-aos-once="true"></span>
                                 </h3>
@@ -1519,7 +1519,7 @@
                             <div class="text-wrapper d-flex flex-column justify-content-between">
                                 <h3 class="projects_list-item_title" data-aos="fade-in" data-aos-duration="500"
                                     data-aos-once="true">
-                                    RMC Construction @ Mylapore
+                                    Deep Woods @ Mylapore
                                     <span class="divider divider--line" data-aos="slide-right" data-aos-duration="500"
                                         data-aos-once="true"></span>
                                 </h3>
@@ -1557,7 +1557,7 @@
                             <div class="text-wrapper d-flex flex-column justify-content-between">
                                 <h3 class="projects_list-item_title" data-aos="fade-in" data-aos-duration="500"
                                     data-aos-once="true">
-                                    RMC Construction @ Shenoy Nagar
+                                    Manor @ Shenoy Nagar
                                     <span class="divider divider--line" data-aos="slide-right" data-aos-duration="500"
                                         data-aos-once="true"></span>
                                 </h3>
