--- a/single-project.html
+++ b/single-project.html
@@ -813,9 +813,9 @@
             "project17": {
                 title: "Our Projects",
                 sourceImage:
-                    "/img/home/home-project/anand.jpeg",
+                    "<div class='slideshow-container'><div class='mySlides fade'><div class='numbertext'>1 / 3</div><img src='./img/home/slider/anand/1.jpeg' style='width:100%''><div class='text'>Caption Text</div></div><div class='mySlides fade'><div class='numbertext'>2 / 3</div><img src='./img/home/slider/anand/1.jpeg' style='width:100%''><div class='text'>Caption Two</div></div><div class='mySlides fade'><div class='numbertext'>3 / 3</div><img src='./img/home/slider/anand/1.jpeg' style='width:100%''><div class='text'>Caption Three</div></div></div>",
                 imgURL:
-                    "/img/home/home-project/anand.jpeg",
+                "<div class='slideshow-container'><div class='mySlides fade'><div class='numbertext'>1 / 3</div><img src='./img/home/slider/anand/1.jpeg' style='width:100%''><div class='text'>Caption Text</div></div><div class='mySlides fade'><div class='numbertext'>2 / 3</div><img src='./img/home/slider/anand/1.jpeg' style='width:100%''><div class='text'>Caption Two</div></div><div class='mySlides fade'><div class='numbertext'>3 / 3</div><img src='./img/home/slider/anand/1.jpeg' style='width:100%''><div class='text'>Caption Three</div></div></div>",
                               descriptions: [" "],
 
                 items: [],
