--- a/index.html
+++ b/index.html
@@ -1155,7 +1155,7 @@ font-weight: 600;">Builders & Flat Promoters</p>
                 margin-top: 1px!important;
                 margin-right: -13px;
             }
-            
+
             .modal-body {
                 border: 20px solid white;
                 border-top: 0;
@@ -1211,7 +1211,9 @@ font-weight: 600;">Builders & Flat Promoters</p>
                 .rmc-log {
                     margin-top: 30px;
                 }
-
+                .founder p{
+                    font-size: 12px;
+                }
             }
         </style>
         <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
